# community-simulation

./: .clippy.toml  .rustfmt.toml  COVERAGE.md  COVERAGE_80_SUCCESS.md  COVERAGE_87_ACHIEVED.md  COVERAGE_ACHIEVEMENT.md  COVERAGE_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  FEATURES.md  FINAL_80_PERCENT_SUCCESS.md  FINAL_SUMMARY.md  LICENSE  LINTING.md  README.md  TODO.md  codecov.yml  config.comprehensive.toml  config.comprehensive.yaml  config.example.toml  config.example.yaml  config.gig_economy.yaml  config.strategy_evolution.yaml  features.md  fix_final.py  fix_remaining.py  fix_tests.py  renovate.json  simplify_tests.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: EXAMPLE.md  README.md  bug_report.md  config.yml  copilot-code-improvements.md  copilot-feature-development.md  copilot-performance-optimization.md  general_issue.md
.github/workflows/: coverage.yml  rust.yml
benches/: simulation_benchmarks.rs
examples/: causal_analysis.rs  insurance_demo.rs
fuzz/: Cargo.toml  FUZZ_TESTING.md
fuzz/fuzz_targets/: fuzz_config_toml.rs  fuzz_config_yaml.rs  fuzz_simulation_init.rs
proptest-regressions/tests/: proptest_tests.txt
src/: asset.rs  auction.rs  causal_analysis.rs  centrality.rs  completion.rs  component.rs  config.rs  contract.rs  credit_rating.rs  crisis.rs  currency.rs  database.rs  engine.rs  entity.rs  environment.rs  error.rs  event.rs  externality.rs  government.rs  insurance.rs  invariant.rs  investment.rs  lending_marketplace.rs  lib.rs  list_commands.rs  loan.rs  main.rs  market.rs  parameter_sweep.rs  person.rs  physics.rs  plugin.rs  pool.rs  production.rs  replay.rs  result.rs  result.rs.bak  scenario.rs  scenario_comparison.rs  skill.rs  (+6 more)
src/tests/: comprehensive_scenario_tests.rs  coverage_80_breakthrough.rs  coverage_boost_tests.rs  coverage_push_tests.rs  coverage_sprint_80.rs  currency_integration_tests.rs  engine_focused_coverage.rs  final_80_breakthrough.rs  final_80_percent_push.rs  final_push_tests.rs  laser_focus_80.rs  mod.rs  proptest_tests.rs  reinforcement_learning_tests.rs  satisficing_tests.rs  scenario_integration_tests.rs  test_helpers.rs  ultimate_coverage_tests.rs  ultra_final_tests.rs
