[package]
name = "simulation-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.0"
strum_macros = "0.27.0"
rand = "0.9"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"