[package]
name = "community-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"
strum = "0.27.0"
strum_macros = "0.27.0"
rand = "0.10"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"
flate2 = "1.0"
colored = "3.0"
rusqlite = "0.38"
rustyline = "17.0"
petgraph = { version = "0.8", features = ["serde-1"] }
chrono = { version = "0.4", features = ["serde"] }
inquire = "0.9"
parquet = "57.3"

[dev-dependencies]
tempfile = "3.10.1"
proptest = "1.4"
criterion = "0.8"

[[bench]]
name = "simulation_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"